--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react-swc": "^3.9.0",
 		"globals": "^16.0.0",
+		"postcss": "^8.5.3",
+		"postcss-preset-mantine": "^1.17.0",
+		"postcss-simple-vars": "^7.0.1",
 		"typescript": "~5.8.3",
 		"vite": "^6.3.3"
 	}
