--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@mantine/core": "^7.17.5",
 		"@mantine/hooks": "^7.17.5",
+		"@vitejs/plugin-react": "^5.1.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0"
 	},
@@ -19,7 +20,6 @@
 		"@biomejs/biome": "1.9.4",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
-		"@vitejs/plugin-react-swc": "^3.9.0",
 		"globals": "^16.0.0",
 		"postcss": "^8.5.3",
 		"postcss-preset-mantine": "^1.17.0",
