--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@mantine/core": "^8.3.7",
-		"@mantine/hooks": "^8.3.7",
+		"@mantine/core": "^8.3.8",
+		"@mantine/hooks": "^8.3.8",
 		"@vitejs/plugin-react": "^5.1.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
@@ -24,7 +24,8 @@
 		"postcss": "^8.5.6",
 		"postcss-preset-mantine": "^1.18.0",
 		"postcss-simple-vars": "^7.0.1",
+		"rolldown-vite": "7.2.2",
 		"typescript": "~5.9.3",
-		"vite": "^7.2.2"
+		"vite": "npm:rolldown-vite@7.2.2"
 	}
 }
