--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"format": "biome check --write",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"format": "biome check --write"
 	},
 	"dependencies": {
 		"@mantine/core": "^8.3.8",
 		"@mantine/hooks": "^8.3.8",
 		"@tabler/icons-react": "^3.35.0",
-		"@vitejs/plugin-react": "^5.1.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
 	},
@@ -21,6 +20,7 @@
 		"@biomejs/biome": "2.3.5",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react": "^5.1.1",
 		"globals": "^16.5.0",
 		"postcss": "^8.5.6",
 		"postcss-preset-mantine": "^1.18.0",
